--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -620,7 +620,7 @@
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
     "    \"\"\"\n",
-    "    Attention: This part I refered to other's help\n",
+    "    Attention: This part I refered to other's help - https://github.com/luuvus/Udacity-DeepLearning-Project3\n",
     "    Return batches of input and target\n",
     "    :param int_text: Text with the words replaced by their ids\n",
     "    :param batch_size: The size of batch\n",
@@ -894,7 +894,8 @@
     "                input_text: x,\n",
     "                targets: y,\n",
     "                initial_state: state,\n",
-    "                lr: learning_rate}\n",
+    "                lr: learning_rate\n",
+    "            }\n",
     "            train_loss, state, _ = sess.run([cost, final_state, train_op], feed)\n",
     "\n",
     "            # Show every <show_every_n_batches> batches\n",
